--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     padding: 1rem 0;
-    background-color: rgb(239, 176, 176);
+    background-color: #efb0b0;
     box-shadow: 0 0 10px black;
 }
 
