--- a/src/app/journal/journal.css
+++ b/src/app/journal/journal.css
@@ -75,7 +75,7 @@
     border: 0;
     outline: 0;
     background: transparent;
-    color: mediumblue;
+    color: grey;
     font-family: 'Handlee', cursive;
     font-weight: bold;
     font-size: 18px;
@@ -130,9 +130,9 @@
 
     .paper-content {
         position: absolute;
-        width: 75%;
-        height: 100%;
-        top: 35%;
+        width: 72%;
+        height: 90%;
+        top: 40%;
 
         p {
             margin-bottom: 1rem;
@@ -148,6 +148,7 @@
     }
 
     .journal-banner {
+        margin: 1rem;
         max-width: 100%;
         height: auto;
         border-radius: 5px;
@@ -157,6 +158,7 @@
     .paper-content textarea {
         max-width: 100%;
         height: 60%;
+        scrollbar-width: none;
     }
 
     .profile_add_button_div {
